add footer on the index.html

--- a/index.html
+++ b/index.html
@@ -280,26 +280,6 @@
           </div>
         </div>
       </section>
-      <!-- schemework -->
-      <!-- <div class="schemework">
-           <div class="container schemework__hover-effect">
-               <div class="schemework__wrapper" onclick="toggle_visibility('list')">
-                   <div class="schemework__figure ellypse">
-                       <p class="ellypse__text">Схема работы</p>
-                   </div>
-   
-                   <div class="schemework__text-block" id="list">
-                       <ul class="schemework__list d-flex-column-center">
-                           <li class="schemework__item">Вы звоните нам или оставляете заявку</li>
-                           <li class="schemework__item">Бесплатный выезд и консультация замерщика</li>
-                           <li class="schemework__item">Расчет стоимости и согласования сроков</li>
-                           <li class="schemework__item">Выполнение работ</li>
-                           <li class="schemework__item">Сдача объекта</li>
-                       </ul>
-                   </div>
-               </div>
-           </div>
-       </div> -->
       <!-- fishing slider -->
       <div class="materials">
         <div class="container">
@@ -357,10 +337,10 @@
 
     <!-- footer -->
     <footer class="footer">
-      <div class="footer__wrapper">
-        <div class="container">
-          <div class="footer__top-part flex">
-            <a class="logo-link footer__logo" href="index.html">
+      <div class="container">
+        <div class="footer__wrapper grid">
+          <div class="footer__column-1">
+            <a class="logo-link" href="index.html">
               <svg
                 width="350"
                 height="92"
@@ -390,41 +370,57 @@
                 />
               </svg>
             </a>
+            <div class="footer__politics">
+              <p class="footer__politics-text">
+                &#169; 2012-2023 Все права защищены
+              </p>
+              <a class="footer__politics-link" href="404.html"
+                >Политика конфидециальности</a
+              >
+            </div>
+            <div class="footer__politics">
+              <p class="footer__politics-text">
+                Все видеозаписи, изображения и текст на этом сайте защищены
+                законом об авторском праве и не могут переиспользоваться
+                где-либо без письменного разрешения правообладателя.
+              </p>
+            </div>
+          </div>
+          <div class="footer__column-2">
             <nav class="main-menu">
-              <ul class="main-menu__list main-menu__list--footer-text flex">
-                <li class="main-menu__item"><a href="#!">Главная</a></li>
+              <ul class="main-menu__list main-menu__list--footer-text">
+                <li class="main-menu__item">
+                  <a href="index.html">Главная</a>
+                </li>
                 <li class="main-menu__item">
                   <a href="about.html">О&nbsp;нас</a>
                 </li>
                 <li class="main-menu__item">
-                  <a href="galary.html">Галерея</a>
-                </li>
-                <li class="main-menu__item">
-                  <a href="faq.html">Вопрос-Ответ</a>
+                  <a href="#!">Галерея</a>
                 </li>
               </ul>
             </nav>
           </div>
-
-          <div class="footer__bot-part footer-bot-part">
-            <div class="footer__bot-content flex">
-              <div class="footer__politics">
-                <p class="footer-bot-part__text">
-                  &#169; 2008-2023 Все права защищены
-                </p>
-                <a class="footer-bot-part__link" href="404.html"
-                  >Политика конфидециальности</a
+          <div class="footer__column-3">
+            <div class="footer__feedback">
+              <p class="footer__feedback-number phone">
+                <a class="phone" href="tel:+79103979890"
+                  >+7 (910) 397 - 98 - 90</a
                 >
-              </div>
-
-              <div class="footer__feedback">
-                <p class="footer-bot-part__number phone">
-                  <a class="phone" href="tel:+79103979890"
-                    >+7 (910) 397 - 98 - 90</a
-                  >
-                </p>
-              </div>
-
+              </p>
+              <p class="footer__feedback-email email">
+                <a class="email" href="andrey@mail.ru">andrey@mail.ru</a>
+              </p>
+              <p class="footer__feedback-adress adress">
+                <a class="email" href="email:andrey@mail.ru"
+                  >г. Нижний Новгород, ул. Ванеева д.93<br />Ежедневно с 9:00 до
+                  18:00</a
+                >
+              </p>
+            </div>
+          </div>
+          <div class="footer__row-bot">
+            <div class="footer__cash">
               <div class="footer__icons flex">
                 <a href="https://vk.com/public212690249">
                   <svg
