add footer adaptive

--- a/about.html
+++ b/about.html
@@ -388,11 +388,12 @@
         </div>
       </section>
     </main>
+    <!-- footer -->
     <footer class="footer">
-      <div class="footer__wrapper">
-        <div class="container">
-          <div class="footer__top-part flex">
-            <a class="logo-link footer__logo" href="index.html">
+      <div class="container">
+        <div class="footer__wrapper grid">
+          <div class="footer__column-1">
+            <a class="logo-link" href="index.html">
               <svg
                 width="350"
                 height="92"
@@ -422,43 +423,62 @@
                 />
               </svg>
             </a>
+            <div class="footer__politics">
+              <p class="footer__politics-text">
+                &#169; 2012-2023 Все права защищены<br />
+
+                <a class="footer__politics-link" href="404.html"
+                  >Политика конфидециальности</a
+                >
+              </p>
+            </div>
+            <div class="footer__politics">
+              <p class="footer__politics-text">
+                Все видеозаписи, изображения и текст на этом сайте защищены
+                законом об авторском праве и не могут переиспользоваться
+                где-либо без письменного разрешения правообладателя.
+              </p>
+            </div>
+          </div>
+          <div class="footer__column-2">
             <nav class="main-menu">
-              <ul class="main-menu__list main-menu__list--footer-text flex">
-                <li class="main-menu__item">
+              <ul
+                class="main-menu__list main-menu__list--footer-text footer-menu__list"
+              >
+                <li class="main-menu__item footer-menu__item">
                   <a href="index.html">Главная</a>
                 </li>
-                <li class="main-menu__item"><a href="#!">О&nbsp;нас</a></li>
-                <li class="main-menu__item">
-                  <a href="galary.html">Галерея</a>
+                <li class="main-menu__item footer-menu__item">
+                  <a href="about.html">О&nbsp;нас</a>
                 </li>
-                <li class="main-menu__item">
-                  <a href="faq.html">Вопрос-Ответ</a>
+                <li class="main-menu__item footer-menu__item">
+                  <a href="#!">Галерея</a>
                 </li>
               </ul>
             </nav>
           </div>
-
-          <div class="footer__bot-part footer-bot-part">
-            <div class="footer__bot-content flex">
-              <div class="footer__politics">
-                <p class="footer-bot-part__text">
-                  &#169; 2008-2023 Все права защищены
-                </p>
-                <a class="footer-bot-part__link" href="404.html"
-                  >Политика конфидециальности</a
+          <div class="footer__column-3">
+            <div class="footer__feedback">
+              <div class="footer__feedback-number phone">
+                <a class="phone" href="tel:+79103979890"
+                  >+7 (910) 397 - 98 - 90</a
                 >
               </div>
-
-              <div class="footer__feedback">
-                <p class="footer-bot-part__number phone">
-                  <a class="phone" href="tel:+79103979890"
-                    >+7 (910) 397 - 98 - 90</a
-                  >
-                </p>
+              <div class="footer__feedback-email email">
+                <a class="email" href="andrey@mail.ru">andrey@mail.ru</a>
               </div>
-
+              <div class="footer__feedback-adress adress">
+                <a class="email" href="email:andrey@mail.ru"
+                  >г. Нижний Новгород, ул. Ванеева д.93<br />Ежедневно с 9:00 до
+                  18:00</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="footer__row-bot">
+            <div class="footer__cash">
               <div class="footer__icons flex">
-                <a href="https://vk.com/public212690249">
+                <a href="https://vk.com/public209453090">
                   <svg
                     width="48"
                     height="48"
@@ -483,7 +503,7 @@
                     </defs>
                   </svg>
                 </a>
-                <a href="https://www.instagram.com/euro_pol152/">
+                <a href="https://www.instagram.com//">
                   <svg
                     width="48"
                     height="48"
