--- a/index.html
+++ b/index.html
@@ -372,11 +372,12 @@
             </a>
             <div class="footer__politics">
               <p class="footer__politics-text">
-                &#169; 2012-2023 Все права защищены
+                &#169; 2012-2023 Все права защищены<br />
+
+                <a class="footer__politics-link" href="404.html"
+                  >Политика конфидециальности</a
+                >
               </p>
-              <a class="footer__politics-link" href="404.html"
-                >Политика конфидециальности</a
-              >
             </div>
             <div class="footer__politics">
               <p class="footer__politics-text">
@@ -388,14 +389,16 @@
           </div>
           <div class="footer__column-2">
             <nav class="main-menu">
-              <ul class="main-menu__list main-menu__list--footer-text">
-                <li class="main-menu__item">
+              <ul
+                class="main-menu__list main-menu__list--footer-text footer-menu__list"
+              >
+                <li class="main-menu__item footer-menu__item">
                   <a href="index.html">Главная</a>
                 </li>
-                <li class="main-menu__item">
+                <li class="main-menu__item footer-menu__item">
                   <a href="about.html">О&nbsp;нас</a>
                 </li>
-                <li class="main-menu__item">
+                <li class="main-menu__item footer-menu__item">
                   <a href="#!">Галерея</a>
                 </li>
               </ul>
@@ -403,26 +406,26 @@
           </div>
           <div class="footer__column-3">
             <div class="footer__feedback">
-              <p class="footer__feedback-number phone">
+              <div class="footer__feedback-number phone">
                 <a class="phone" href="tel:+79103979890"
                   >+7 (910) 397 - 98 - 90</a
                 >
-              </p>
-              <p class="footer__feedback-email email">
+              </div>
+              <div class="footer__feedback-email email">
                 <a class="email" href="andrey@mail.ru">andrey@mail.ru</a>
-              </p>
-              <p class="footer__feedback-adress adress">
+              </div>
+              <div class="footer__feedback-adress adress">
                 <a class="email" href="email:andrey@mail.ru"
                   >г. Нижний Новгород, ул. Ванеева д.93<br />Ежедневно с 9:00 до
                   18:00</a
                 >
-              </p>
+              </div>
             </div>
           </div>
           <div class="footer__row-bot">
             <div class="footer__cash">
               <div class="footer__icons flex">
-                <a href="https://vk.com/public212690249">
+                <a href="https://vk.com/public209453090">
                   <svg
                     width="48"
                     height="48"
@@ -447,7 +450,7 @@
                     </defs>
                   </svg>
                 </a>
-                <a href="https://www.instagram.com/euro_pol152/">
+                <a href="https://www.instagram.com//">
                   <svg
                     width="48"
                     height="48"
