Add block photo

--- a/about.html
+++ b/about.html
@@ -255,7 +255,7 @@
           <div class="properties__card_wrapp flex">
             <div class="properties__card card">
               <img class="card__image" src="assets/images/quality.png" alt="" />
-              <h4 class="card__title">15 лет опыта рабoты</h4>
+              <h4 class="card__title">Опыт работы с 2012 года</h4>
             </div>
             <div class="properties__card card">
               <img class="card__image" src="assets/images/price.png" alt="" />
@@ -449,10 +449,10 @@
                   <a href="index.html">Главная</a>
                 </li>
                 <li class="main-menu__item footer-menu__item">
-                  <a href="about.html">О&nbsp;нас</a>
+                  <a href="#!">О&nbsp;нас</a>
                 </li>
                 <li class="main-menu__item footer-menu__item">
-                  <a href="#!">Галерея</a>
+                  <a href="galary.html">Галерея</a>
                 </li>
               </ul>
             </nav>
@@ -539,7 +539,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="assets/js/main.js"></script>
-    <script src="assets/js/page-main.js"></script>
     <script src="assets/js/about.js"></script>
   </body>
 </html>
