--- a/galary.html
+++ b/galary.html
@@ -136,37 +136,19 @@
 	</header>
 
 	<!-- Main -->
-	<main class="works">
-		<!-- section works -->
-		<section class="works__main">
-			<div class="works__main-container container">
-				<!-- <h1 class="works__title title">Наши работы</h1> -->
-
-				<!-- <div class="works__main-banner">
-					<div class="works__main-form application">
-						<form class="application__form" action="#" method="post">
-							<h2 class="application__title title">Оставить заявку</h2>
-							<h3 class="application__subtitle title">Сделаем расчёт</h3>
-							<input type="text" placeholder="Имя" required>
-							<input class="tel" type="tel" placeholder="Телефон" required>
-							<span class="span main-text">Отправляя заявку, Вы соглашаетесь с<br />
-								<a href="404.html">политикой конфиденциальности</a></span>
-							<button class="button application__button primary-btn--blue" type="submit">
-								Отправить
-							</button>
-						</form>
-					</div>
-				</div> -->
-			</div>
+	<main class="galary">
+		<!-- section galary -->
+		<section class="galary__main">
+			<div class="galary__main-container container"></div>
 		</section>
 
 		<!-- section examples -->
-		<section class="works__examples">
-			<div class="works__examples-container container">
-				<h2 class="works__examples-title title">
-					Наша фотогалерея выполненных работ
+		<section class="galary__examples">
+			<div class="galary__examples-container container">
+				<h2 class="galary__examples-title title">
+					Фотогалерея магазина
 				</h2>
-				<div class="works__examples-slider slider">
+				<div class="galary__examples-slider slider">
 					<div class="slider-line flex">
 						<div class="slide first">
 							<img src="assets/images/works/slider/1.jpg" alt="1" />
@@ -202,70 +184,26 @@
 			</div>
 		</section>
 
-		<!-- section reviews -->
-		<section class="works__reviews">
-			<div class="works__reviews-container container">
-				<h2 class="works__reviews-title title">Отзывы о нашей работе</h2>
-				<div class="works__reviews-flex flex">
-					<div class="works__reviews-item reviews-item">
-						<div class="works__reviews-header flex">
-							<div class="reviews__item-image">
-								<img class="reviews__img" src="assets/images/works/reviews/1.jpg" alt="people" />
-							</div>
-							<div class="reviews__item-title">
-								<h3 class="title">Марина Андреевна</h3>
-							</div>
-						</div>
-
-						<div class="reviews__item-text">
-							<p>
-								Всё очень понравилось! Сделали быстро, а главное -
-								качественно. После себя оставили порядок. В квартире делали
-								наливной пол. Очень муторно и долго с ней. А уже в доме решили
-								делать полусухую стяжку, и ни разу не пожалели! Рекомендую!
-							</p>
-						</div>
+		<!-- section photos -->
+		<section class="galary">
+			<div class="galary__container container">
+				<h2 class="galary__title title">Фотографии, предоставленные покупателями</h2>
+				<div class="galary__flex flex">
+					<div class="galary__item photo-item">
 					</div>
-					<div class="works__reviews-item reviews-item">
-						<div class="works__reviews-header flex">
-							<div class="reviews__item-image">
-								<img class="reviews__img" src="assets/images/works/reviews/2.jpg" alt="people" />
-							</div>
-							<div class="reviews__item-title">
-								<h3 class="title">Алексей Борисович</h3>
-							</div>
-						</div>
-
-						<div class="reviews__item-text">
-							<p>
-								Понравилось, что работают официально. Рассчитали смету,
-								заключили договор. Гарантия, точное выполнение сроков. Радует,
-								что не вылезло никаких лишних доплат - как рассчитали, так и
-								заплатили. А то в некоторых конторах изначально ставили один
-								ценник, потом из ниоткуда просили ещё и ещё. Так что
-								рекомендую! Спасибо мастерам!
-							</p>
-						</div>
+					<div class="galary__item photo-item">
 					</div>
-					<div class="works__reviews-item reviews-item">
-						<div class="works__reviews-header flex">
-							<div class="reviews__item-image">
-								<img class="reviews__img" src="assets/images/works/reviews/3.jpg" alt="people" />
-							</div>
-							<div class="reviews__item-title">
-								<h3 class="title">Дмитрий Сергеевич</h3>
-							</div>
-						</div>
-
-						<div class="reviews__item-text">
-							<p>
-								Думал сначала сделать всё сам и напрячь друзей и тестя. Потом
-								понял, какой объём работ меня ждёт. Решил посоветоваться с
-								друзьями строителями. Подсказали контору. Очень доволен! Всё
-								сделали быстро, без лишней головной боли. Ничего не пришлось
-								контролировать, и всё по демократичным ценам!
-							</p>
-						</div>
+					<div class="galary__item photo-item">
+					</div>
+					<div class="galary__item photo-item">
+					</div>
+					<div class="galary__item photo-item">
+					</div>
+					<div class="galary__item photo-item">
+					</div>
+					<div class="galary__item photo-item">
+					</div>
+					<div class="galary__item photo-item">
 					</div>
 				</div>
 			</div>
@@ -418,7 +356,7 @@
 			  </div>
 			</div>
 		 </footer>
-	<script src="assets/js/our_works.js"></script>
+	<script src="assets/js/galary.js"></script>
 	<script src="assets/js/main.js"></script>
 </body>
 
