--- a/index.html
+++ b/index.html
@@ -393,13 +393,13 @@
                 class="main-menu__list main-menu__list--footer-text footer-menu__list"
               >
                 <li class="main-menu__item footer-menu__item">
-                  <a href="index.html">Главная</a>
+                  <a href="#!">Главная</a>
                 </li>
                 <li class="main-menu__item footer-menu__item">
                   <a href="about.html">О&nbsp;нас</a>
                 </li>
                 <li class="main-menu__item footer-menu__item">
-                  <a href="#!">Галерея</a>
+                  <a href="galary.html">Галерея</a>
                 </li>
               </ul>
             </nav>
@@ -483,7 +483,6 @@
     </footer>
     <!-- js scripts -->
     <script src="assets/js/main.js"></script>
-    <script src="assets/js/page-main.js"></script>
-    <script src="assets/js/our_works.js"></script>
+    <script src="assets/js/galary.js"></script>
   </body>
 </html>
