add photo in galary slider

--- a/galary.html
+++ b/galary.html
@@ -151,20 +151,20 @@
 				<div class="galary__examples-slider slider">
 					<div class="slider-line flex">
 						<div class="slide first">
-							<img src="assets/images/works/slider/1.jpg" alt="1" />
+							<img src="assets/images/galary/slider/1.webp" alt="1" />
 						</div>
 
 						<div class="slide">
-							<img src="assets/images/works/slider/2.jpg" alt="2" />
+							<img src="assets/images/galary/slider/2.webp" alt="2" />
 						</div>
 						<div class="slide">
-							<img src="assets/images/works/slider/3.jpg" alt="3" />
+							<img src="assets/images/galary/slider/3.webp" alt="3" />
 						</div>
 						<div class="slide">
-							<img src="assets/images/works/slider/4.jpg" alt="4" />
+							<img src="assets/images/galary/slider/4.webp" alt="4" />
 						</div>
 						<div class="slide">
-							<img src="assets/images/works/slider/5.jpg" alt="5" />
+							<img src="assets/images/galary/slider/5.webp" alt="5" />
 						</div>
 					</div>
 					<div class="navigation-manual flex">
@@ -175,10 +175,10 @@
 						<div class="manual-btn" data-slide="4"></div>
 					</div>
 					<button class="slider-prev button primary-btn--blue">
-						<img src="assets/images/works/slider_arrow.svg" alt="Prev" />
+						<img src="assets/images/galary/slider_arrow.svg" alt="Prev" />
 					</button>
 					<button class="slider-next button primary-btn--blue">
-						<img src="assets/images/works/slider_arrow.svg" alt="Next" />
+						<img src="assets/images/galary/slider_arrow.svg" alt="Next" />
 					</button>
 				</div>
 			</div>
