add green color

--- a/about.html
+++ b/about.html
@@ -282,7 +282,7 @@
         </div>
       </section>
 
-      <!-- section-works -->
+      <!-- section-works
       <section class="section works">
         <div class="container">
           <h2 class="works__title title">
@@ -295,7 +295,7 @@
             </video>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <!-- section-guarantee -->
       <section class="section guarantee">
@@ -355,7 +355,7 @@
         </div>
       </section>
 
-      <!-- section-request -->
+      <!-- section-request
       <section class="section request" id="submit-form">
         <div class="container">
           <h2 class="request__title title">Оставить заявку</h2>
@@ -387,7 +387,7 @@
           </form>
         </div>
       </section>
-    </main>
+    </main> -->
     <!-- footer -->
     <footer class="footer">
       <div class="container">
