--- a/galary.html
+++ b/galary.html
@@ -188,24 +188,71 @@
 		<section class="galary">
 			<div class="galary__container container">
 				<h2 class="galary__title title">Фотографии, предоставленные покупателями</h2>
-				<div class="galary__flex flex">
-					<div class="galary__item photo-item">
+				<div class="galary-grid">
+					<div class="galary-grid__item">
+					  <img
+						 class="galary__pic"
+						 src="assets/images/galary/photos/1.jpg"
+						 alt=""
+					  />
 					</div>
-					<div class="galary__item photo-item">
+	
+					<div class="galary-grid__item">
+					  <img
+						 class="galary__pic"
+						 src="assets/images/galary/photos/1.jpg"
+						 alt=""
+					  />
 					</div>
-					<div class="galary__item photo-item">
+	
+					<div class="galary-grid__item">
+					  <img
+						 class="galary__pic"
+						 src="assets/images/galary/photos/1.jpg"
+						 alt=""
+					  />
 					</div>
-					<div class="galary__item photo-item">
+	
+					<div class="galary-grid__item">
+					  <img
+						 class="galary__pic"
+						 src="assets/images/galary/photos/1.jpg"
+						 alt=""
+					  />
 					</div>
-					<div class="galary__item photo-item">
+	
+					<div class="galary-grid__item">
+					  <img
+						 class="galary__pic"
+						 src="assets/images/galary/photos/1.jpg"
+						 alt=""
+					  />
 					</div>
-					<div class="galary__item photo-item">
+	
+					<div class="galary-grid__item">
+					  <img
+						 class="galary__pic"
+						 src="assets/images/galary/photos/1.jpg"
+						 alt=""
+					  />
 					</div>
-					<div class="galary__item photo-item">
+	
+					<div class="galary-grid__item">
+					  <img
+						 class="galary__pic"
+						 src="assets/images/galary/photos/1.jpg"
+						 alt=""
+					  />
 					</div>
-					<div class="galary__item photo-item">
+	
+					<div class="galary-grid__item">
+					  <img
+						 class="galary__pic"
+						 src="assets/images/galary/photos/1.jpg"
+						 alt=""
+					  />
 					</div>
-				</div>
+				 </div>
 			</div>
 		</section>
 	</main>
