--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
           </div>
         </div>
       </section>
-      <!-- fishing slider -->
+      <!-- fishing slider
       <div class="materials">
         <div class="container">
           <h2 class="materials__title title">Картинки о рыбалке</h2>
@@ -321,7 +321,7 @@
             </button>
           </div>
         </div>
-      </div>
+      </div> -->
       <!-- Cart -->
       <section class="card">
         <div class="container">
