--- a/index.html
+++ b/index.html
@@ -207,7 +207,50 @@
           </div>
         </div>
       </div>
-      <!-- brend -->
+      
+				<!-- Banner -->
+		<section class="banner">
+			<div class="container">
+					<h2 class="banner__title title">Наши предложения</h2>
+					<div class="banner-grid">
+						<div class="banner-grid__item item-11">
+							<div class="">11</div>
+						</div>
+						<div class="banner-grid__item item-12">
+							<div class="">12</div>
+						</div>
+						<div class="banner-grid__item item-22">
+							<div class="banner__slider flex">
+								<div class="slider__wrapper">
+								  <div class="slide slide1 slide--active">
+									 <img src="assets/images/main-slider/slide-1.jpg" alt="slide-1" />
+								  </div>
+								  <div class="slide slide2">
+									 <img src="assets/images/main-slider/slide-2.jpg" alt="slide-2" />
+								  </div>
+								  <div class="slide slide3">
+									 <img src="assets/images/main-slider/slide-3.jpg" alt="slide-3" />
+								  </div>
+								</div>
+								<div class="dots__wrapper flex">
+								  <span class="dot dot--active"></span>
+								  <span class="dot"></span>
+								  <span class="dot"></span>
+								</div>
+							 </div>
+						</div>
+						<div class="banner-grid__item item-31">
+							<div class="">31</div>
+						</div>
+						<div class="banner-grid__item item-32">
+							<div class="">32</div>
+						</div>
+					</div>
+				</div>
+		</section>
+
+		
+		<!-- brend -->
       <section class="brend">
         <div class="container">
           <h2 class="brend__title title">
@@ -280,6 +323,7 @@
           </div>
         </div>
       </section>
+
 
       <!-- Cart -->
       <section class="card">
@@ -412,6 +456,6 @@
     </footer>
     <!-- js scripts -->
     <script src="assets/js/main.js"></script>
-    <script src="assets/js/galary.js"></script>
+	 <script src="assets/js/about.js"></script>
   </body>
 </html>
