end block banner

--- a/galary.html
+++ b/galary.html
@@ -129,7 +129,7 @@
 					</p>
 				</div>
 
-				<a class="button primary-btn primary-btn--orange modal--open" href="#!">Оставить заявку</a>
+				<a class="button primary-btn primary-btn--green modal--open" href="#!">Оставить заявку</a>
 			</div>
 		</div>
 		</div>
