--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               >
               <button
                 type="submit"
-                class="button form__submit primary-btn--orange"
+                class="button form__submit primary-btn--green"
               >
                 Отправить
               </button>
@@ -186,7 +186,7 @@
             </p>
           </div>
 
-          <a class="header__btn primary-btn--orange modal--open" href="#!"
+          <a class="header__btn primary-btn--green modal--open" href="#!"
             >Оставить заявку</a
           >
         </div>
@@ -214,10 +214,10 @@
 					<h2 class="banner__title title">Наши предложения</h2>
 					<div class="banner-grid">
 						<div class="banner-grid__item item-11">
-							<div class="">11</div>
+							<a class="button primary-btn--green" href="#">Удилища</a>
 						</div>
 						<div class="banner-grid__item item-12">
-							<div class="">12</div>
+							<a class="button primary-btn--green" href="#">Кормушки</a>
 						</div>
 						<div class="banner-grid__item item-22">
 							<div class="banner__slider flex">
@@ -240,10 +240,10 @@
 							 </div>
 						</div>
 						<div class="banner-grid__item item-31">
-							<div class="">31</div>
+							<a class="button primary-btn--green" href="#">Катушки</a>
 						</div>
 						<div class="banner-grid__item item-32">
-							<div class="">32</div>
+							<a class="button primary-btn--green" href="#">Приманки</a>
 						</div>
 					</div>
 				</div>
@@ -254,7 +254,7 @@
       <section class="brend">
         <div class="container">
           <h2 class="brend__title title">
-            У нас можно приобрести товары различных брендов, в том числе:
+            Популярные бренды
           </h2>
           <div class="brend-grid">
             <div class="brend-grid__item">
