--- a/about.html
+++ b/about.html
@@ -426,7 +426,7 @@
             </a>
             <div class="footer__politics">
               <p class="footer__politics-text">
-                &#169; 2012-2023 Все права защищены<br />
+                &#169; 2012-<span class="out-date"></span> Все права защищены<br />
 
                 <a class="footer__politics-link" href="404.html"
                   >Политика конфидециальности</a
