--- a/index.html
+++ b/index.html
@@ -331,12 +331,10 @@
 				<div class="map-title title">
 					<h2>Как нас найти</h2>
 				</div>
-				<div class="map__grid">
-					<div class="map__column-left">
-						<h3>Как и когда нас найти</h3>
-						<p></p>
-					</div>
-					<div class="map__column-right">
+				<div class="map-address">
+						<p>г. Нижний Новгород, ул. Ванеева, дом 93, 1-й этаж</p>
+				</div>
+				<div class="map__column-right">
 					<script
 					type="text/javascript"
 					charset="utf-8"
@@ -347,8 +345,6 @@
 					lang=ru_RU&amp;
 					scroll=true">
 				</script>
-					</div>
-				</div>
 			</div>
       </section>
    </main>
