--- a/about.html
+++ b/about.html
@@ -190,7 +190,7 @@
             </p>
           </div>
 
-          <a class="primary-btn primary-btn--orange modal--open" href="#!"
+          <a class="primary-btn primary-btn--green modal--open" href="#!"
             >Оставить заявку</a
           >
         </div>
