--- a/about.html
+++ b/about.html
@@ -200,7 +200,7 @@
     <!-- Main -->
     <main>
       <!-- section banner -->
-      <section class="section banner">
+      <!-- <section class="section banner">
         <div class="container">
           <div class="banner__data flex">
             <h1 class="banner__title title">О нас</h1>
@@ -246,6 +246,33 @@
             </div>
           </div>
         </div>
+      </section> -->
+
+      <section class="about">
+        <div class="container">
+          <div class="wrapper">
+            <div class="about__content content">
+              <div class="content__wrapper">
+                <h1 class="content__title">О нас</h1>
+              </div>
+            </div>
+            <div class="about__bubble"><span class="dot"></span></div>
+            <div class="about__bubble"><span class="dot"></span></div>
+            <div class="about__bubble"><span class="dot"></span></div>
+            <div class="about__bubble"><span class="dot"></span></div>
+            <div class="about__bubble"><span class="dot"></span></div>
+            <div class="about__bubble"><span class="dot"></span></div>
+            <div class="about__bubble"><span class="dot"></span></div>
+            <div class="about__bubble"><span class="dot"></span></div>
+            <div class="about__bubble"><span class="dot"></span></div>
+            <div class="about__bubble"><span class="dot"></span></div>
+            <div class="about__bubble"><span class="dot"></span></div>
+            <div class="about__bubble"><span class="dot"></span></div>
+            <div class="about__bubble"><span class="dot"></span></div>
+            <div class="about__bubble"><span class="dot"></span></div>
+            <div class="about__bubble"><span class="dot"></span></div>
+          </div>
+      </div>
       </section>
 
       <!-- section-properties -->
