--- a/about.html
+++ b/about.html
@@ -254,9 +254,34 @@
             <div class="about__content content">
               <div class="content__wrapper">
                 <h1 class="content__title">О нас</h1>
+                <div class="content__grid">
+                  <div class="content__item">
+                    <img src="assets/images/faq-fish-icon.svg" alt="">
+                    <p>Более 20 000 товаров в наличии на собственном складе</p>
+                  </div>
+                  <div class="content__item">
+                    <img src="assets/images/faq-fish-icon.svg" alt="">
+                    <p>Более 20 000 товаров в наличии на собственном складе</p>
+                  </div>
+                  <div class="content__item">
+                    <img src="assets/images/faq-fish-icon.svg" alt="">
+                    <p>Более 20 000 товаров в наличии на собственном складе</p>
+                  </div>
+                  <div class="content__item">
+                    <img src="assets/images/faq-fish-icon.svg" alt="">
+                    <p>Более 20 000 товаров в наличии на собственном складе</p>
+                  </div>
+                  <div class="content__item">
+                    <img src="assets/images/faq-fish-icon.svg" alt="">
+                    <p>Более 20 000 товаров в наличии на собственном складе</p>
+                  </div>
+                  <div class="content__item">
+                    <img src="assets/images/faq-fish-icon.svg" alt="">
+                    <p>Более 20 000 товаров в наличии на собственном складе</p>
+                  </div>
+                </div>
               </div>
             </div>
-            <div class="about__bubble"><span class="dot"></span></div>
             <div class="about__bubble"><span class="dot"></span></div>
             <div class="about__bubble"><span class="dot"></span></div>
             <div class="about__bubble"><span class="dot"></span></div>
