--- a/about.html
+++ b/about.html
@@ -257,27 +257,27 @@
                 <div class="content__grid">
                   <div class="content__item">
                     <img src="assets/images/faq-fish-icon.svg" alt="">
-                    <p>Более 20 000 товаров в наличии на собственном складе</p>
+                    <p class="content__text">Более 20 000 товаров в наличии на собственном складе</p>
                   </div>
                   <div class="content__item">
                     <img src="assets/images/faq-fish-icon.svg" alt="">
-                    <p>Более 20 000 товаров в наличии на собственном складе</p>
+                    <p class="content__text">Более 20 000 товаров в наличии на собственном складе</p>
                   </div>
                   <div class="content__item">
                     <img src="assets/images/faq-fish-icon.svg" alt="">
-                    <p>Более 20 000 товаров в наличии на собственном складе</p>
+                    <p class="content__text">Более 20 000 товаров в наличии на собственном складе</p>
                   </div>
                   <div class="content__item">
                     <img src="assets/images/faq-fish-icon.svg" alt="">
-                    <p>Более 20 000 товаров в наличии на собственном складе</p>
+                    <p class="content__text">Более 20 000 товаров в наличии на собственном складе</p>
                   </div>
                   <div class="content__item">
                     <img src="assets/images/faq-fish-icon.svg" alt="">
-                    <p>Более 20 000 товаров в наличии на собственном складе</p>
+                    <p class="content__text">Более 20 000 товаров в наличии на собственном складе</p>
                   </div>
                   <div class="content__item">
                     <img src="assets/images/faq-fish-icon.svg" alt="">
-                    <p>Более 20 000 товаров в наличии на собственном складе</p>
+                    <p class="content__text">Более 20 000 товаров в наличии на собственном складе</p>
                   </div>
                 </div>
               </div>
