--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
                 required
               />
             </div>
-            <div class="form__field">
+            <!-- <div class="form__field">
               <input
                 type="email"
                 name="email"
                 class="input-field"
                 placeholder="Email"
               />
-            </div>
+            </div> -->
             <div class="form__field">
               <input
                 type="tel"
