--- a/index.html
+++ b/index.html
@@ -64,14 +64,6 @@
                 required
               />
             </div>
-            <!-- <div class="form__field">
-              <input
-                type="email"
-                name="email"
-                class="input-field"
-                placeholder="Email"
-              />
-            </div> -->
             <div class="form__field">
               <input
                 type="tel"
@@ -466,6 +458,6 @@
     </footer>
     <!-- js scripts -->
     <script src="assets/js/main.js"></script>
-	 <script src="assets/js/about.js"></script>
+	 <script src="assets/js/main-slider.js"></script>
   </body>
 </html>
