catalog alfa version

--- a/catalog.html
+++ b/catalog.html
@@ -194,9 +194,9 @@
     <main>
         <section class="catalog">
             <div class="container">
-                <ol id="list">
-                    <li class="list__item" id="0"></li>
-                </ol>
+                <div class="list" id="list">
+                    <div class="list__item" id="0"></div>
+                </div>
             
                 <input type="text" id="inputName">
                 <input type="date" id="inputDate">
